2005-12-08 Kimmo
 PATCH: [ 1374782 ] fix for bug 1300957 Crash on save 'unique' file comparison
  Submitted by Oliver Mellet, some additional comment improvements by me.
  Src: DirDoc.cpp
 Takashi is now developer, Olivier Mellet submitted a patch
  Docs/Users: Contributors.txt

2005-12-08 Perry
 PATCH: [ 1376457 ] Need clarification in platform test in ShellExtension
  ShellExtension: ShellExtension.cpp

2005-12-08 Takashi
 fix two-line-end-markers bug that was reported in:
  "PATCH: [ 1372716 ] patch for RFE:[ 922992 ] Word Wrap/split long lines" 
 Src: stringdiffs.cpp

2005-12-08 Takashi
 PATCH: [ 1372716 ] patch for RFE:[ 922992 ] Word Wrap/split long lines 
  Src: Merge.rc MergeDoc.cpp MergeEditView.cpp MergeEditView.h OptionsDef.h
   OptionsInit.cpp resource.h 
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h ccrystaltextview2.cpp
   crystalparser.cpp editcmd.h 
  Src/Languages: *.rc resource.h

2005-12-07 Perry
 PATCH [ 1374931 ] Bugfixes & upload binary for RCLocalizationHelper
  (RCLocalizationHelper plugin)

2005-12-06 Perry
 PATCH [ 1372575 ] Fix link for DisplayXmlFiles plugin
  (DisplayXMLFiles plugin)
 TODO [ 1341058 ] ToDoDeleteThisValidateColumnOrdering()
  Src: DirView.cpp DirView.h DirViewColHandler.cpp

2005-12-06 WinMerge experimental release 2.5.0.3 (cvs)

2005-12-06 Kimmo
 PATCH: [ 1372589 ] Document tildas in config
  Submitted by Perry
  Src: ConfigLog.cpp
 PATCH: [ 1373037 ] Fix filter dialog to correctly add new filters
  Submitted by Perry
  Src: FileFiltersDlg.cpp
 PATCH: [ 1370183 ] ShellExtension: better way to check for WinMerge executable
  ShellExtension: WinMergeShell.cpp
 Bump ShellExtension version to 1.7.0
  ShellExtension: ShellExtension.rc

2005-12-04 Perry
 PATCH: [ 1372974 ] Make local function "GuessEncoding_from_bytes" static
  Src: codepage_detect.cpp
 PATCH: [ 1368762 ] Fix assignment in DirScan_GetItems
  Also add explanatory comment, for what variable does.
  Src: DirScan.cpp

2005-12-04 Jochen