@@ -1,3 +1,7 @@
+2005-12-08 Perry
+ PATCH: [1374728 ] Fix filter dialog delete
+  Src: FileFilterMgr.cpp
+
 2005-12-08 Kimmo
  PATCH: [ 1374782 ] fix for bug 1300957 Crash on save 'unique' file comparison
   Submitted by Oliver Mellet, some additional comment improvements by me.
